# Relator

./: CHANGELOG.md  LICENSE  README.md  __init__.py  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: GUIDE.md  agents-and-llms.md  cli.md  concepts.md  cookbook.md  data-flow.md  errors.md  examples.md  getting-started.md  index.md  integrations.md  llm-overview.md  placeholders.md  python-api.md  rendering-samples.md  template-syntax.md
prototyping/example/: README.md  context_with_slots.json
prototyping/example/00_showcase/: README.md  build_report.py  template.md
prototyping/example/01_tests/: README.md  build_report.py  sample_pytest.json  template.md
prototyping/example/02_coverage/: README.md  build_report.py  sample_coverage.json  template.md
prototyping/example/03_data_report/: README.md  build_report.py  data.json  template.md
prototyping/example/04_agents/: README.md  agent_output.json  agent_output.schema.json  build_report.py  template.md
prototyping/example/99_full_reference/: README.md  build_report.py  template.md
src/relator/: builtins.py  engine.py  media.py  parser.py  slots.py  sql_orm.py  template.py  template_manifest.py  tree_render.py
src/reporting/: __init__.py  builtins.py  cli.py  engine.py  errors.py  media.py  parser.py  pydantic_render.py  resolver.py  template.py  template_manifest.py
tests/: test_integrations.py  test_template_engine.py  test_template_manifest.py
