[project]
name = "relator"
version = "1.3.0"
description = "Simple markdown/html report templating with loops, tables, lists, media, slots, Pydantic and SQLAlchemy."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "reporting maintainers" }]
keywords = ["report", "template", "markdown", "html", "pydantic", "sqlalchemy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
dependencies = [
  "rich",
  "pillow",
  "matplotlib",
]

[project.scripts]
relator = "relator.cli:main"

[project.urls]
Homepage = "https://github.com/threenebula23/Relator"
Repository = "https://github.com/threenebula23/Relator"
Documentation = "https://github.com/threenebula23/Relator/blob/master/reporting/docs/GUIDE.md"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
pydantic = ["pydantic>=2"]
sqlalchemy = ["sqlalchemy>=2"]
integrations = ["pydantic>=2", "sqlalchemy>=2"]
dev = ["pytest>=7.0", "pydantic>=2", "sqlalchemy>=2"]
